# hw

./: README.md  process_repo.py  requirements.txt
code_repo2/LightX2V-main/: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  requirements.txt  requirements_animate.txt  requirements_win.txt  setup_vae.py
code_repo2/LightX2V-main/.github/ISSUE_TEMPLATE/: bug_report.md
code_repo2/LightX2V-main/.github/workflows/: lint.yml
code_repo2/LightX2V-main/app/: README.md  gradio_demo.py  gradio_demo_zh.py  run_gradio.sh  run_gradio_win.bat
code_repo2/LightX2V-main/configs/: model_pipeline.json  volcengine_voices_list.json
code_repo2/LightX2V-main/configs/attentions/: wan_i2v_flash.json  wan_i2v_nbhd_480p.json  wan_i2v_nbhd_720p.json  wan_i2v_radial.json  wan_i2v_svg.json  wan_i2v_svg2.json  wan_t2v_sparge.json
code_repo2/LightX2V-main/configs/bench/: lightx2v_2.json  lightx2v_3.json  lightx2v_3_distill.json  lightx2v_4.json  lightx2v_5.json  lightx2v_5_distill.json
code_repo2/LightX2V-main/configs/causvid/: wan_i2v_causvid.json  wan_t2v_causvid.json
code_repo2/LightX2V-main/configs/changing_resolution/: wan_i2v.json  wan_i2v_U.json  wan_t2v.json  wan_t2v_U.json  wan_t2v_U_teacache.json
code_repo2/LightX2V-main/configs/deploy/: wan_i2v.json  wan_t2v.json
code_repo2/LightX2V-main/configs/dist_infer/: wan22_moe_i2v_cfg.json  wan22_moe_i2v_cfg_ulysses.json  wan22_moe_i2v_ulysses.json  wan22_moe_t2v_cfg.json  wan22_moe_t2v_cfg_ulysses.json  wan22_moe_t2v_ulysses.json  wan22_ti2v_i2v_cfg.json  wan22_ti2v_i2v_cfg_ulysses.json  wan22_ti2v_i2v_ulysses.json  wan22_ti2v_t2v_cfg.json  wan22_ti2v_t2v_cfg_ulysses.json  wan22_ti2v_t2v_ulysses.json  wan_i2v_dist_cfg_ulysses.json  wan_i2v_dist_ring.json  wan_i2v_dist_ulysses.json  wan_t2v_dist_cfg.json  wan_t2v_dist_cfg_ring.json  wan_t2v_dist_cfg_ulysses.json  wan_t2v_dist_ring.json  wan_t2v_dist_ulysses.json
code_repo2/LightX2V-main/configs/distill/: wan_i2v_distill_4step_cfg.json  wan_i2v_distill_4step_cfg_4090.json  wan_i2v_distill_4step_cfg_4090_lora.json  wan_i2v_distill_4step_cfg_lora.json  wan_t2v_distill_4step_cfg.json  wan_t2v_distill_4step_cfg_4090.json  wan_t2v_distill_4step_cfg_dynamic.json  wan_t2v_distill_4step_cfg_lora.json  wan_t2v_distill_4step_cfg_lora_4090.json
code_repo2/LightX2V-main/configs/hunyuan_video_15/: hunyuan_video_i2v_480p.json  hunyuan_video_i2v_720p.json  hunyuan_video_i2v_720p_cfg_distilled.json  hunyuan_video_t2v_480p.json  hunyuan_video_t2v_480p_distill.json  hunyuan_video_t2v_720p.json
code_repo2/LightX2V-main/configs/matrix_game2/: matrix_game2_gta_drive.json  matrix_game2_gta_drive_streaming.json  matrix_game2_templerun.json  matrix_game2_templerun_streaming.json  matrix_game2_universal.json  matrix_game2_universal_streaming.json
code_repo2/LightX2V-main/configs/meanflow/: wan_t2v_meanflow_distill_2step.json
code_repo2/LightX2V-main/configs/quantization/: wan_i2v.json  wan_i2v_q8f.json  wan_i2v_torchao.json
code_repo2/LightX2V-main/configs/qwen_image/: qwen_image_i2i.json  qwen_image_i2i_2509.json  qwen_image_i2i_2509_quant.json  qwen_image_i2i_2511.json  qwen_image_i2i_2511_dist.json  qwen_image_i2i_2511_lora.json  qwen_image_i2i_lora.json  qwen_image_t2i.json
code_repo2/LightX2V-main/configs/seko_talk/: seko_talk_01_base.json  seko_talk_02_fp8.json  seko_talk_03_dist.json  seko_talk_04_fp8_dist.json  seko_talk_05_offload_fp8_4090.json  seko_talk_05_offload_fp8_4090_dist.json  seko_talk_06_offload_fp8_H100.json  seko_talk_07_dist_offload.json  seko_talk_08_5B_base.json  seko_talk_09_base_fixed_min_area.json  seko_talk_10_fp8_dist_fixed_min_area.json  seko_talk_11_fp8_dist_fixed_shape.json  seko_talk_12_fp8_dist_fixed_shape_8gpus_1s.json  seko_talk_13_fp8_dist_bucket_shape_8gpus_5s_realtime.json  seko_talk_14_fp8_dist_bucket_shape_8gpus_1s_realtime.json  seko_talk_15_base_compile.json  seko_talk_16_fp8_dist_compile.json  seko_talk_17_base_vsr.json  seko_talk_22_nbhd_attn.json  seko_talk_23_fp8_dist_nbhd_attn.json  seko_talk_24_fp8_dist_compile_nbhd_attn.json  seko_talk_25_int8_dist_fp8_comm.json  seko_talk_28_f2v.json
code_repo2/LightX2V-main/configs/self_forcing/: wan_t2v_sf.json
code_repo2/LightX2V-main/configs/video_frame_interpolation/: wan_t2v.json
code_repo2/LightX2V-main/configs/wan/: wan_flf2v.json  wan_i2v.json  wan_t2v.json  wan_t2v_enhancer.json  wan_vace.json
code_repo2/LightX2V-main/configs/wan22/: wan_animate.json  wan_animate_4090.json  wan_animate_8gpu.json  wan_animate_lora.json  wan_animate_replace.json  wan_animate_replace_4090.json  wan_distill_moe_flf2v.json  wan_distill_moe_flf2v_fp8.json  wan_distill_moe_flf2v_int8.json  wan_distill_moe_flf2v_with_lora.json  wan_moe_flf2v.json  wan_moe_i2v.json  wan_moe_i2v_4090.json  wan_moe_i2v_audio.json  wan_moe_i2v_distill.json  wan_moe_i2v_distill_4090.json  wan_moe_i2v_distill_5090.json  wan_moe_i2v_distill_quant.json  wan_moe_i2v_distill_with_lora.json  wan_moe_t2v.json  wan_moe_t2v_distill.json  wan_moe_t2v_distill_lora.json  wan_ti2v_i2v.json  wan_ti2v_i2v_4090.json  wan_ti2v_t2v.json  wan_ti2v_t2v_4090.json
code_repo2/LightX2V-main/dockerfiles/: Dockerfile  Dockerfile_5090  Dockerfile_cambricon_mlu590  Dockerfile_cu124  Dockerfile_deploy
code_repo2/LightX2V-main/docs/EN/: .readthedocs.yaml
code_repo2/LightX2V-main/docs/PAPERS_ZH_CN/: .readthedocs.yaml
code_repo2/LightX2V-main/docs/ZH_CN/: .readthedocs.yaml
code_repo2/LightX2V-main/examples/: README.md  README_zh.md
code_repo2/LightX2V-main/examples/hunyuan_video/: hunyuan_i2v.py  hunyuan_t2v.py  hunyuan_t2v_distill.py
code_repo2/LightX2V-main/lightx2v/: __init__.py  infer.py  pipeline.py
code_repo2/LightX2V-main/lightx2v_kernel/: CMakeLists.txt  README.md  pyproject.toml
code_repo2/LightX2V-main/lightx2v_platform/: registry_factory.py  set_ai_device.py
code_repo2/LightX2V-main/test_cases/: run_seko_talk_01_base.sh  run_wan_i2v.sh  run_wan_i2v_offload.sh  run_wan_t2v.sh  run_wan_t2v_dist_cfg_ulysses.sh  run_wan_t2v_sf.sh
code_repo2/LightX2V-main/tools/: download_rife.py
(+645 files in other folders)
