[build-system]
requires = [
  "scikit-build-core>=0.10",
  "torch>=2.7.0",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "lightx2v-kernel"
version = "0.0.1"
description = "Kernel Library for lightx2v"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = []

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"

wheel.py-api = "cp39"
wheel.license-files = []
wheel.packages = ["python/lightx2v_kernel"]
